product page extra space fix

--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -59,7 +59,7 @@
 .grandTotal {
   width: 150px;
   height: 50px;
-  padding: 20px 50px;
+  padding: 15px 40px;
   background-color: rgb(221, 98, 98);
   margin: 0 20px;
 }
