--- a/src/app/components/products/products.component.css
+++ b/src/app/components/products/products.component.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word; */
-  margin-top: 65px;
+  margin-top: 64px;
   background: #fff;
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.2);
@@ -57,4 +57,7 @@
 }
 .details{
 margin-bottom: 6px;
+}
+.row{
+  justify-content: center;
 }
